--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,7 +8,7 @@ type Props = SiteMeta;
 const { title, description, ogImage, articleDate } = Astro.props;
 
 const titleSeparator = "•";
-const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
+const siteTitle = title?.length && titleSeparator?.length ? `${title} ${titleSeparator} ${siteConfig.title}` : siteConfig.title || siteConfig.title;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url).href;
 ---
